# ocular_interaction

./: .gitignore  .landscape.yaml  .scrutinizer.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py  stack.xml
data/actions/: ocular_interaction_actions.xml
data/atoms/: default_atoms.xml
data/recipes/: ocular_interaction.xml
nodes/: event_handler_action_translator.py  event_handler_atom_translator.py
ocular_active_learning/: README.md  mainpage.dox  manifest.xml
ocular_active_learning/data/: conejo.txt  leon.txt  oso.txt  perro.txt  rana.txt
ocular_active_learning/doc/: Makefile  al_asker_node.rst  conf.py  index.rst  manifest.yaml  modules.rst  ocular_active_learning.rst  ocular_estimator.rst  ocular_predictions_accumulator.rst  ocular_uncertainty_publisher.rst  prediction_summarizer.rst
ocular_active_learning/launch/: ocular_al.launch
ocular_active_learning/msg/: AccumulatedPredictions.msg  NamedPredictions.msg
ocular_active_learning/nodes/: al_asker_node.py  ocular_estimator.py  ocular_predictions_accumulator.py  ocular_uncertainty_publisher.py  prediction_summarizer.py
ocular_active_learning/src/ocular_active_learning/: al_utils.py
ocular_data/: mainpage.dox  manifest.xml
ocular_data/data/: results_10_views.csv  results_15_views.csv  results_1_view.csv  results_20_views.csv  results_5_views.csv  summary_data.csv
ocular_data/nodes/: data_analizer_node.py
ocular_data/notebooks/: Learning Curves-Copy1.ipynb  Learning Curves.ipynb  data_analizer.ipynb
ocular_data/notebooks/.ipynb_checkpoints/: Learning Curves-checkpoint.ipynb  data_analizer-checkpoint.ipynb
ocular_interaction/: CMakeLists.txt  README.md  manifest.xml  requirements.txt
ocular_interaction/data/: objects.yaml  objects.yaml.autosave
ocular_interaction/launch/: ocular_interaction.launch
ocular_interaction/msg/: ObjectDescriptor.msg
ocular_interaction/nodes/: asr_atom_translator.py  asr_command_parser.py  dialog_logger_node.py  etts_action_translator.py  event_handler_action_translator.py  event_handler_atom_translator.py  object_id_notifier.py  object_learned_atom_translator.py  object_name_action_translator.py  object_name_atom_translator.py
ocular_interaction/params/: asr_commands.yaml
ocular_launch/: mainpage.dox
ocular_launch/launch/: ocular_project.launch  ocular_project_data_tests.launch
ocular_launcher/: README.md  manifest.xml
ocular_launcher/launch/: ocular_project.launch
ocular_msgs/: mainpage.dox  manifest.xml
ocular_msgs/msg/: NamedPredictions.msg  Prediction.msg  PredictionSummary.msg  UncertaintyMetric.msg
src/ocular_interaction/: ocular_action_translators.py  ocular_atom_translators.py
src/test/: test_ocular_translators.py
(+35 files in other folders)
