<?xml version="1.0"?>
<package>
  <name>ocular_interaction</name>
  <version>0.0.0</version>
  <description>Interaction Components for the OCULAR Package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vgonzale@ing.u3m.es"> Victor Gonzalez-Pacheco</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LASR-UC3M</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ocular_interaction</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dialog_manager_msgs</build_depend>
  <build_depend>interaction_common</build_depend>
  <build_depend>monarch_multimodal_fusion</build_depend>
  <build_depend>ocular</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dialog_manager_msgs</run_depend>
  <run_depend>interaction_common</run_depend>
  <run_depend>monarch_multimodal_fusion</run_depend>
  <run_depend>ocular</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>unittest</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Autogenerate documentation -->
    <rosdoc config="rosdoc.yaml"/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>